fix: margin top banner on various pages after removing running header, remove white spaces around invite code

--- a/app/assets/stylesheets/components/_invite-code.scss
+++ b/app/assets/stylesheets/components/_invite-code.scss
@@ -1,5 +1,5 @@
 .invite-code {
-	margin-top: 4rem;
+	margin-top: 2rem;
 	background-color: $primary-super-transparent;
 
 	&__header {
