--- a/app/assets/stylesheets/components/_invite.scss
+++ b/app/assets/stylesheets/components/_invite.scss
@@ -1,5 +1,5 @@
 .invite {
-	margin: 4rem 0;
+	margin: 2rem 0;
 
 	&__header {
 		color: $white;
